@@ -9,6 +9,7 @@ import (
 	"regexp"
 	"runtime"
 	"strings"
+	"syscall"
 )
 
 // Windows argument parsing is all over the map; try to fix it here
@@ -110,7 +111,7 @@ func getExtDefCfg(plugin *Plugin) (*[]byte, error) {
 }
 
 // callPlugin (normally called with go ...) sends a command to a plugin.
-func callPlugin(bot *Robot, plugin *Plugin, command string, args ...string) {
+func callPlugin(bot *Robot, plugin *Plugin, interactive bool, command string, args ...string) (retval PlugRetVal) {
 	pluginsRunning.Lock()
 	pluginsRunning.count++
 	pluginsRunning.Unlock()
@@ -122,6 +123,12 @@ func callPlugin(bot *Robot, plugin *Plugin, command string, args ...string) {
 		}
 		pluginsRunning.Unlock()
 	}()
+	var errString string
+	defer func() {
+		if interactive && errString != "" {
+			bot.Reply(errString)
+		}
+	}()
 	if !(plugin.name == "builtInadmin" && command == "abort") {
 		defer checkPanic(bot, fmt.Sprintf("Plugin: %s, command: %s, arguments: %v", plugin.name, command, args))
 	}
@@ -129,11 +136,13 @@ func callPlugin(bot *Robot, plugin *Plugin, command string, args ...string) {
 	bot.pluginID = plugin.pluginID
 	switch plugin.pluginType {
 	case plugBuiltin, plugGo:
-		pluginHandlers[plugin.name].Handler(bot, command, args...)
+		return pluginHandlers[plugin.name].Handler(bot, command, args...)
 	case plugExternal:
 		var fullPath string // full path to the executable
 		if len(plugin.pluginPath) == 0 {
 			Log(Error, "pluginPath empty for external plugin:", plugin.name)
+			errString = "There was a problem calling the external plugin"
+			return MechanismFail
 		}
 		if byte(plugin.pluginPath[0]) == byte("/"[0]) {
 			fullPath = plugin.pluginPath
@@ -143,7 +152,8 @@ func callPlugin(bot *Robot, plugin *Plugin, command string, args ...string) {
 				_, err := os.Stat(robot.installPath + "/" + plugin.pluginPath)
 				if err != nil {
 					Log(Error, fmt.Errorf("Couldn't locate external plugin %s: %v", plugin.name, err))
-					return
+					errString = "There was a problem calling the external plugin"
+					return MechanismFail
 				}
 				fullPath = robot.installPath + "/" + plugin.pluginPath
 				Log(Debug, "Using stock external plugin:", fullPath)
@@ -156,7 +166,8 @@ func callPlugin(bot *Robot, plugin *Plugin, command string, args ...string) {
 		if err != nil {
 			err = fmt.Errorf("looking up interpreter for %s: %s", fullPath, err)
 			Log(Error, fmt.Sprintf("Unable to call external plugin %s, no interpreter found: %s", fullPath, err))
-			return
+			errString = "There was a problem calling the external plugin"
+			return MechanismFail
 		}
 		externalArgs := make([]string, 0, 5+len(args))
 		// on Windows, we exec the interpreter with the script as first arg
@@ -184,30 +195,34 @@ func callPlugin(bot *Robot, plugin *Plugin, command string, args ...string) {
 		stderr, err := cmd.StderrPipe()
 		if err != nil {
 			Log(Error, fmt.Errorf("Creating stderr pipe for external command \"%s\": %v", fullPath, err))
-			bot.Reply(fmt.Sprintf("There were errors calling external plugin \"%s\", you might want to ask an administrator to check the logs", plugin.name))
-			return
+			errString = fmt.Sprintf("There were errors calling external plugin \"%s\", you might want to ask an administrator to check the logs", plugin.name)
+			return MechanismFail
 		}
 		if err = cmd.Start(); err != nil {
 			Log(Error, fmt.Errorf("Starting command \"%s\": %v", fullPath, err))
-			bot.Reply(fmt.Sprintf("There were errors calling external plugin \"%s\", you might want to ask an administrator to check the logs", plugin.name))
-			return
+			errString = fmt.Sprintf("There were errors calling external plugin \"%s\", you might want to ask an administrator to check the logs", plugin.name)
+			return MechanismFail
 		}
-		defer func() {
-			if err = cmd.Wait(); err != nil {
-				Log(Error, fmt.Errorf("Waiting on external command \"%s\": %v", fullPath, err))
-				bot.Reply(fmt.Sprintf("There were errors calling external plugin \"%s\", you might want to ask an administrator to check the logs", plugin.name))
-			}
-		}()
-		stdErrBytes, err := ioutil.ReadAll(stderr)
-		if err != nil {
+		var stdErrBytes []byte
+		if stdErrBytes, err = ioutil.ReadAll(stderr); err != nil {
 			Log(Error, fmt.Errorf("Reading from stderr for external command \"%s\": %v", fullPath, err))
-			bot.Reply(fmt.Sprintf("There were errors calling external plugin \"%s\", you might want to ask an administrator to check the logs", plugin.name))
-			return
+			errString = fmt.Sprintf("There were errors calling external plugin \"%s\", you might want to ask an administrator to check the logs", plugin.name)
+			return MechanismFail
 		}
 		stdErrString := string(stdErrBytes)
 		if len(stdErrString) > 0 {
 			Log(Warn, fmt.Errorf("Output from stderr of external command \"%s\": %s", fullPath, stdErrString))
-			bot.Reply(fmt.Sprintf("There was error output while calling external plugin \"%s\", you might want to ask an administrator to check the logs", plugin.name))
+			errString = fmt.Sprintf("There was error output while calling external plugin \"%s\", you might want to ask an administrator to check the logs", plugin.name)
+		}
+		if err = cmd.Wait(); err != nil {
+			Log(Error, fmt.Errorf("Waiting on external command \"%s\": %v", fullPath, err))
+			errString = fmt.Sprintf("There were errors calling external plugin \"%s\", you might want to ask an administrator to check the logs", plugin.name)
+			if exitstatus, ok := err.(*exec.ExitError); ok {
+				if status, ok := exitstatus.Sys().(syscall.WaitStatus); ok {
+					retval = PlugRetVal(status.ExitStatus())
+				}
+			}
 		}
 	}
+	return retval
 }
